--- a/test/fixtures/usr_roles.yml
+++ b/test/fixtures/usr_roles.yml
@@ -4,8 +4,9 @@
 # model remove the '{}' from the fixture names and add the columns immediately
 # below each fixture, per the syntax in the comments below
 #
-one: {}
-# column: value
-#
-two: {}
-# column: value
+role1:
+  role_name: Shop Admin
+  description: This is shop admin
+role2:
+  role_name: Cashier
+  description: This is cashier
